--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-dom": "^18.3.1",
     "recharts": "^2.13.0"
   },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
+  },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
