fix(deps): Override recharts to use React 19
Explicitly set `react` and `react-dom` versions for `recharts` to ensure compatibility with the project's React 19 upgrade. This prevents potential peer dependency issues.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "react-dom": "^19.2.3",
     "recharts": "^2.15.0"
   },
+  "overrides": {
+    "recharts": {
+      "react": "^19.2.3",
+      "react-dom": "^19.2.3"
+    }
+  },
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
