feat: Upgrade dependencies and update project configuration
Updates several core dependencies including React, Firebase, and Recharts to their latest versions. This also involves adjusting the project's build configuration and types to align with these updates, ensuring compatibility and leveraging new features.

The `package.json` has been updated to reflect the new dependencies and their versions. The `index.html` includes minor adjustments to script configuration for better compatibility. The `metadata.json` has been updated to provide a more comprehensive description of the ABFIT Elite application. Additionally, type definitions in `types.ts` have been refined for clarity and consistency. The `services/gemini.ts` file has been updated to use more descriptive constant names for Gemini models and to incorporate a revised system instruction for more precise scientific output.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "abfit-elite",
   "private": true,
-  "version": "1.8.6",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
-    "firebase": "^10.7.1",
-    "lucide-react": "^0.450.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "recharts": "^2.13.0"
+    "firebase": "^12.7.0",
+    "lucide-react": "^0.562.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "recharts": "^2.15.0"
+  },
+  "overrides": {
+    "recharts": {
+      "react": "^19.2.3",
+      "react-dom": "^19.2.3"
+    }
   },
   "devDependencies": {
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
