--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "abfit-elite",
   "private": true,
-  "version": "1.9.0",
+  "version": "1.9.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,9 +11,9 @@
   "dependencies": {
     "@google/genai": "^1.34.0",
     "firebase": "^10.7.1",
-    "lucide-react": "^0.450.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "lucide-react": "latest",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "recharts": "^2.13.0"
   },
   "devDependencies": {
