--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "express": "^4.19.2",
     "firebase": "^10.7.1",
     "lucide-react": "latest",
     "react": "^18.3.1",
