feat: Integrate Zustand and enhance workout management
This commit introduces Zustand for global state management, improving data synchronization across components. It also refactors workout management to support direct assignment to students via a new `studentId` field.

Key changes include:
- Added `zustand` dependency.
- Updated `index.html` to include Zustand CDN.
- Modified `types.ts` to add `studentId` to the `Workout` interface and introduce new fields for direct prescription compatibility.
- Enhanced `StudentFlow.tsx` to use Zustand for reactive student data fetching and workout selection.
- Updated `CoachFlow.tsx` to correctly assign workouts to specific students using `studentId`.
- Integrated new components for Nutrition and Analytics.
- Updated version in `package.json`.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "abfit-elite",
   "private": true,
-  "version": "1.9.1",
+  "version": "1.9.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,7 +16,8 @@
     "lucide-react": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.13.0"
+    "recharts": "^2.13.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
